2010-04-20  James Robinson  <jamesr@chromium.org>

        Unreviewed. Another round of chromium test expectation SVG updates.

        * platform/chromium/test_expectations.txt:

2010-04-20  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Anders Carlsson.

        backgroundColor is oddly indented in layer tree dump
        https://bugs.webkit.org/show_bug.cgi?id=37885
        
        Fix indentation in this expected result.

        * compositing/geometry/preserve-3d-switching-expected.txt:

2010-04-20  James Robinson  <jamesr@chromium.org>

        Unreviewed. Fix typo in chromium test expectations.

        * platform/chromium/test_expectations.txt:

2010-04-20  James Robinson  <jamesr@chromium.org>

        Unreviewed.  Update chromium test expectations to reflect changes
        in SVG tests from r57886.

        * platform/chromium/test_expectations.txt:

2010-04-20  Sergey Ulanov <sergeyu@chromium.org>

        Unreviewed, checking in baselines due to changes to Chromium's video scaling algorithm.

        * platform/chromium-linux/media/video-replaces-poster-expected.checksum:
        * platform/chromium-linux/media/video-replaces-poster-expected.png:
        * platform/chromium-mac/media/video-replaces-poster-expected.checksum:
        * platform/chromium-mac/media/video-replaces-poster-expected.png:
        * platform/chromium-win/media/video-replaces-poster-expected.checksum:
        * platform/chromium-win/media/video-replaces-poster-expected.png:
        * platform/chromium-win/media/video-zoom-expected.checksum: Added.
        * platform/chromium-win/media/video-zoom-expected.png: Added.
        * platform/chromium-win/media/video-zoom-expected.txt: Added.

2010-04-20  Robin Cao  <robin.webkit@gmail.com>

        Reviewed by Dirk Schulze.

        Update expected results after bug fix: https://bugs.webkit.org/show_bug.cgi?id=36718
        now animateColor on target element with attributes 'fill' and 'stroke' set to 'none' is possible.
